添加并发编程同步示例

--- a/auto-blazor/Blazor.Auto.Test/Pages/Index.razor
+++ b/auto-blazor/Blazor.Auto.Test/Pages/Index.razor
@@ -57,11 +57,13 @@
 
     List<FieldDescriptor> descriptors;
 
-    protected override void OnParametersSet()
+    protected override Task OnParametersSetAsync()
     {
         descriptors = Model.ToDescriptor().ToList();
-        base.OnParametersSet();
+        return base.OnParametersSetAsync();
     }
+
+
 
 }
 
